--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -1,7 +1,39 @@
+html, body {
+    margin:0px;
+    height:100%;
+  }
+
 body{
-    background-color: grey;
-    text-align: center;
-    margin: auto;
-    font-weight: bolder;
-    font-size: 500%;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    display: inline;
+    size: 400%;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
 }
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.inner{
+    margin: 0 20% 0 20%;
+    font-size: 200%;
+}
+
