--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -4,12 +4,13 @@ html, body {
   }
 
 body{
+    text-align: center;
     /* display: flex;
     justify-content: center;
     align-items: center; */
     display: inline;
     size: 400%;
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background: linear-gradient(-45deg, #f82323, #ff6823, #32db2c, #2326d5, #7822e9);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 }
@@ -34,6 +35,6 @@ body{
 }
 .inner{
     margin: 0 20% 0 2% 0%;
-    font-size: 200%;
+    font-size: 150%;
 }
 
