--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -81,19 +81,20 @@ body{
 }
 
 .navlink{
+    padding-top: 0.5rem;
+    padding-bottom: 0,5rem;
     color: #82849A;
-    display: flex;
-    align-items: center;
+    display: inline-block;
     height: 5rem;
     text-decoration: none;
     transition: 600ms;
     filter: grayscale(100%) opacity(0.7);
 }
 .navlink:hover{
+    padding: 0.5rem 3rem 0rem 3em;
     color: #4C73A4;
     filter: grayscale(0%) opacity(1);
     background: #1d1f31;
-    
 }
 
 .navlink:focus{
@@ -114,3 +115,28 @@ body{
 .navtext{
     display: none;
 }
+
+.tooltip{
+    display: inline-block;
+}
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+    left: 105%;
+    top: -1rem;
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
